--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@tauri-apps/plugin-fs": "^2.2.0",
     "@tauri-apps/plugin-opener": "^2",
     "@tauri-apps/plugin-sql": "^2.2.0",
+    "angular-markdown-editor": "^3.1.1",
     "chart.js": "^4.4.7",
     "fs": "^0.0.1-security",
     "ng2-charts": "^6.0.1",
